--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.9.1",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^3.0.1",
+    "astro": "^4.9.1",
     "typescript": "^5.4.5"
   }
 }
