--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/mdx": "^3.0.1",
+    "@fontsource-variable/inter": "^5.0.18",
     "astro": "^4.9.1",
     "hast-util-find-and-replace": "^5.0.1",
     "mdast-util-to-string": "^4.0.0",
